--- a/lambda/takeover/s3-content/index.html
+++ b/lambda/takeover/s3-content/index.html
@@ -21,7 +21,7 @@ img {
 
 <font face="verdana,arial,sans-serif"><h1>도메인 탈취 방지 자동 생성 페이지</h1></font>
 
-<img src="starbucks-domain-protection.png" alt="Starbucks Domain Protection" style="width:90%;">
+<img src="domain-protection.png" alt="Domain Protection" style="width:90%;">
 
 <body>
 </html>
